Snap Selection to Grid #59686

Closed
opened 2018-12-20 19:22:01 +01:00 by Jonas-ehlers@gmx.de · 7 comments

System Information
Operating system: Archlinux 4.19.9 x86_64 GNU/Linux
Graphics card: Intel® HD Graphics 3000

Blender Version
Broken:
2.80, 36121a1bdc, blender2.8, 2018-12-20, as found on the splash screen
Worked:
2.79

Short description of error
Snap Selection to Grid only snaps the largest grid increment, instead of scaling with the zoom level. This makes it unusable for finer geometory{F6018340}

Exact steps for others to reproduce the error
In edit mode select all vertecies and use Snap Selection to Grid via search. Undo, zoom in and repeat.

**System Information** Operating system: Archlinux 4.19.9 x86_64 GNU/Linux Graphics card: Intel® HD Graphics 3000 **Blender Version** Broken: 2.80, 36121a1bdcd8, blender2.8, 2018-12-20, as found on the splash screen Worked: 2.79 **Short description of error** Snap Selection to Grid only snaps the largest grid increment, instead of scaling with the zoom level. This makes it unusable for finer geometory{[F6018340](https://archive.blender.org/developer/F6018340/snap.blend)} **Exact steps for others to reproduce the error** In edit mode select all vertecies and use Snap Selection to Grid via search. Undo, zoom in and repeat.

Added subscriber: @JE-4

Added subscriber: @JE-4

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB

You can always just adjust the actual grid size instead. But I guess you are right that it is a bit confusing when you are in ortho view.

@brecht, is this intended or not?

You can always just adjust the actual grid size instead. But I guess you are right that it is a bit confusing when you are in ortho view. @brecht, is this intended or not?
Sebastian Parborg self-assigned this 2018-12-21 18:25:27 +01:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

@mano-wii worked on this before.

It's supposed to snap to the visible grid, and if you zoom in a little bit more it does. But maybe the computation is slightly off or some threshold needs to be tweaked. It's a little fuzzy as the grid fades in smoothly.

@mano-wii worked on this before. It's supposed to snap to the visible grid, and if you zoom in a little bit more it does. But maybe the computation is slightly off or some threshold needs to be tweaked. It's a little fuzzy as the grid fades in smoothly.
Sebastian Parborg removed their assignment 2018-12-21 18:49:55 +01:00
Germano Cavalcante was assigned by Sebastian Parborg 2018-12-21 18:49:55 +01:00

This issue was referenced by e6e2f65585

This issue was referenced by e6e2f655857b43326d74577c50755409d7beaf53

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59686
No description provided.